[project]
name = "mwparserfromhell"
dynamic = ["version"]
description = "MWParserFromHell is a parser for MediaWiki wikicode"
authors = [
    {name = "Ben Kurtovic", email = "ben@benkurtovic.com"},
]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "mwparserfromhell", "wikipedia", "wiki", "mediawiki", "wikicode", "wikitext"
]
readme = "README.rst"
requires-python = ">= 3.9"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
]

[project.urls]
Repository = "https://github.com/earwig/mwparserfromhell"
Documentation = "https://mwparserfromhell.readthedocs.io/"
Issues = "https://github.com/earwig/mwparserfromhell/issues"
Changelog = "https://github.com/earwig/mwparserfromhell/blob/main/CHANGELOG"

[dependency-groups]
dev = [
    "psutil",
    "pytest",
    "pytest-cov",
    "setuptools",
    "sphinx",
]

[build-system]
requires = ["setuptools >= 77.0.3", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.cibuildwheel]
environment = { WITH_EXTENSION = "1" }
environment-pass = ["RUNNER_OS"]
test-groups = ["dev"]
test-command = [
    'python -c "import mwparserfromhell.parser._tokenizer"',
    "pytest {project}/tests -rxs --cov=mwparserfromhell --cov-report=lcov:coverage.lcov",
    "python {project}/scripts/save_coverage.py",
]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
extend-select = [
    "I",
    "UP",
]

[tool.mypy]
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
